Added unit tests for lectures service, added one extra endpoint